stylesheets/style.css
.body{
	font: sans-serif;
	
}
#container{
	width: 100%;
	height: 900px;
	margin: -8px;
	overflow: hidden;
	position: relative;
}
.layer{ /*finish implementing this part, should be similar to #container --> refer to medium post*/
	height: 900px;
    background-position: bottom center;
    background-size: auto;
  	background-repeat: no-repeat;
  	width: 100%;
  	position: fixed;
  	z-index: -1;
}

/*test layer*/
.layer1{
	background-image: url(../images/mainbackground.jpg);
}

.layer2{
	background-image: url(../images/hill.png);
}

.layer3{
	background-image: url(../images/palmtree1.png);
	background-size: 60%;
}

.layer4{
	background-image: url(../images/palmtree2.png);
	background-size: 70%;
}

/*winter layer*/
.layer5{
	background-image: url(../images/winter/sky.png);
	background-size: 100% 100%;
}
.layer6{
	background-image: url(../images/winter/snowflakelayer1.png);
}
.layer7{
	background-image: url(../images/winter/snowflakelayer2.png);
}
.layer8{
	background-image: url(../images/winter/cloud1.png);
	background-position: right-top;
}
.layer15{
	background-image: url(../images/winter/snowpilebehind.png);
	background-position: center-bottom;
	background-size: 100% 100%;
}
.layer9{
	background-image: url(../images/winter/snowpile.png);
	background-position: center-bottom;
	background-size: 100% 100%;

}
.layer10{
	background-image: url(../images/winter/baretree.png);
}
.layer11{
	background-image: url(../images/winter/snowpatches1.png);
}
.layer12{
	background-image: url(../images/winter/snowpatches2.png);
}
.layer13{
	background-image: url(../images/winter/snowpatches3.png);
}
.layer14{
	background-image: url(../images/winter/snowpatchesfinal.png);
}


/*main content*/
.heading{
	font-family: 'Kaushan Script', cursive;
	font-size: 300%;
	padding-left: 8%;
	width: 70%;
	margin-left: auto;
	margin-right: auto;
	margin-top: 3.3%;

}
.textcontent{
	background-color: #000;
	width: 100%;
	padding: 5%;

}
.textcontent p{
	color: #fff;
}
.textcontent2{
	font-family: 'Roboto Condensed', sans-serif;
	font-size: 90%;
	background-color: #fff;
/*	padding-left: 1%;*/
	padding-right: 1%;	
	padding-bottom: 5%;
	width: 100%;
	margin: -8px;
}
.textcontent2 p{
	color: #000;
	padding-left: 8%;
	padding-right: 8%;
	width: 50%;
	margin: auto;
	line-height: 2.5em;
}

.author{
	font-style: italic;
}
.audioplayer{
	width: 50%;
	margin-left: auto;
	margin-right: auto;
	margin-top: 3%;
}
.copyright{
	width: 50%;
	margin-left:auto;
	margin-right:auto;
	margin-top: 4%;
	color: #A8A8A8;
}

